--- a/index.html
+++ b/index.html
@@ -8,36 +8,61 @@
 		<title>TMA Construction</title>
 		<link rel="stylesheet" href="./style.css">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=Lato|Raleway&display=swap" rel="stylesheet">
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	</head>
 
-	<div class="modall">
-		<div>
-			<p> Site under construction </p>
-		</div>
-	</div>
-
 	<body>
-		<header>
+		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  			<ol class="carousel-indicators">
+    			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    			<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    			<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  			</ol>
+  			<div class="carousel-inner">
+  				<div id="navbar" class="d-flex justify-content-center">
+					<div class="row" style="padding-top:5%">
+						<div class="col-md-4" style="text-align:center; padding-right:20%;"><a href="#skills">Skills</a></div>
+						<div class="col-md-4" style="text-align:center;"><a href="#contact">Contact</a></div>
+						<div class="col-md-4" style="text-align:center;"><a href="#portfolio">Portfolio</a></div>
+					</div>
+				</div>
+				<div class="row" id="titulo">
+					<div class="col-md-12">
+						<h1 style="text-align:center;">TMA Construction</h1>
+					</div>
+					<div class="col-md-12">
+						<p style="text-align:center;">Construction and Contracting in Greenwich, CT</p>
+					</div>
+				</div>
+    			<div class="carousel-item active">
+      				<img class="d-block w-100" src="img/slide1.jpg" alt="First slide">
+    			</div>
+    			<div class="carousel-item">
+      				<img class="d-block w-100" src="img/slide2.jpg" alt="Second slide">
+    			</div>
+    			<div class="carousel-item">
+      				<img class="d-block w-100" src="img/slide3.jpg" alt="Third slide">
+    			</div>
+  			</div>
+  			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    			<span class="sr-only">Previous</span>
+  			</a>
+  			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+    			<span class="sr-only">Next</span>
+  			</a>
+		</div>
+
+		<div class="modall">
 			<div>
-				<nav id="navbar">
-					<ul> 
-						<li><a href="#portfolio">Portfolio</a></li>
-						<li><a href="#contact">Contact</a></li>
-						<li><a href="#skills">Skills</a></li>
-					</ul>
-				</nav>
+				<p> Site under construction </p>
 			</div>
-
-			<div id="titulo">
-				<h1>TMA Construction</h1>
-				<p>Construction and Contracting in Greenwich, CT</p>
-			</div>
-		</header>
-
+		</div>
 		<section id="skills">
-			<div class="container align-items-center">
-				<div class="row">
+			<div class="container">
+				<div class="row align-items-center">
 					<div class="col-md-4">
 						<img src="">
 						<h3>Advanced technology</h3>
@@ -77,7 +102,7 @@
 
 		<section id="portfolio">
 			<div class="container">
-				<div class="row">
+				<div class="row align-items-center">
 					<div class="col-md-4">
 						<h3>Project 1 Address</h3>
 						<img src="">
